<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_triage</name>
  <version>0.1.0</version>
  <description>ros2 triage — a ROS 2 CLI plugin for runtime graph diagnostics.
    Detects dead topics, QoS mismatches, TF tree issues, and more.
    Outputs human-readable severity-ranked findings and optional JSON for CI.
  </description>
  <maintainer email="user@example.com">darshan</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>ros2cli</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
